--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,8 @@ pytest = "^8.3.2"
 pre-commit = "^3.7.1"
 ruff = "^0.6.4"
 mypy = "^1.11.1"
+pytest-cov = ">=5.0"
+coverage-badge = ">=1.1"
 
 [build-system]
 requires = ["poetry-core>=1.8.0"]
