--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,9 @@ packages = [{ include = "trainflow_ai", from = "src" }]
 [tool.poetry.dependencies]
 python = "^3.12"
 langgraph = "^0.2.27"
+langchain-openai = "^0.2.0"
+chainlit = "^1.1.401"
+pydantic = ">=2.7,<2.10"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.2"
@@ -43,5 +46,5 @@ strict = true
 mypy_path = "src"
 
 [[tool.mypy.overrides]]
-module = ["langgraph.*", "pytest"]
+module = ["langgraph.*", "pytest", "chainlit", "langchain_openai.*"]
 ignore_missing_imports = true
