Improve Cloud Run deployment reliability
- Add .gcloudignore to exclude unnecessary files from build
- Use --quiet flag and timeout for gcloud builds submit to avoid log streaming issues
- Add better error handling and logging to CI deployment step
- Configure Cloud Run deployment with explicit resource limits
- Add build ID logging for better debugging

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -76,4 +76,9 @@ jobs:
           REGION: ${{ secrets.CLOUD_RUN_REGION }}
           SERVICE_NAME: ${{ secrets.CLOUD_RUN_SERVICE }}
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
-        run: bash scripts/deploy_cloud_run.sh
+        run: |
+          echo "Starting deployment to Cloud Run..."
+          echo "Project: $PROJECT_ID"
+          echo "Region: $REGION" 
+          echo "Service: $SERVICE_NAME"
+          bash scripts/deploy_cloud_run.sh
