Add custom Cloud Build logging for VPC-SC environments
- Create dedicated Cloud Build logs bucket within project perimeter
- Add cloudbuild.yaml with GCS_ONLY logging and STREAM_OFF options
- Update deploy script to use custom logs and staging directories
- Add setup_cloudbuild_logs.sh for VPC-SC specific configuration
- Grant proper IAM permissions for Cloud Build and GitHub Actions SAs
- Add lifecycle policy to automatically clean up old logs (30 days)
- Update documentation with VPC-SC setup instructions

--- a/.gcloudignore
+++ b/.gcloudignore
@@ -43,6 +43,9 @@ htmlcov/
 # CI/CD files
 .github/
 
+# But keep cloudbuild.yaml
+!cloudbuild.yaml
+
 # Local development
 .env.local
 .env.development
