--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ langgraph = "^1.0.4"
 langchain-openai = "^1.1.0"
 chainlit = "^2.9.2"
 pydantic = ">=2.7,<2.13"
+fit-tool = "^0.9.13"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^9.0.1"
@@ -21,6 +22,8 @@ ruff = "^0.14.5"
 mypy = "^1.11.1"
 pytest-cov = ">=5.0"
 coverage-badge = ">=1.1"
+matplotlib = "^3.10.7"
+pytest-xdist = "^3.6.1"
 
 [build-system]
 requires = ["poetry-core>=1.8.0"]
@@ -29,6 +32,7 @@ build-backend = "poetry.core.masonry.api"
 [tool.pytest.ini_options]
 testpaths = ["tests"]
 pythonpath = ["src"]
+addopts = "-n auto"
 
 [tool.ruff]
 line-length = 100
@@ -46,5 +50,19 @@ strict = true
 mypy_path = "src"
 
 [[tool.mypy.overrides]]
-module = ["langgraph.*", "pytest", "chainlit", "langchain_openai.*"]
+module = ["langgraph.*", "chainlit", "langchain_openai.*", "pytest"]
 ignore_missing_imports = true
+
+[[tool.mypy.overrides]]
+module = [
+    "matplotlib.*",
+    "numpy",
+    "fit_tool.*",
+    "fit_tool.profile.messages.record_message",
+]
+ignore_missing_imports = true
+
+[[tool.mypy.overrides]]
+module = ["tests", "tests.*"]
+disable_error_code = ["misc"]
+allow_untyped_decorators = true
